tests/errors/invalid-alternating-tremolo.typ
#import "../../src/lib.typ": score
#score(time: "4/4", bars: ((notes: "tremolo 16 { c5:w }"),))
